<resources>
    <string name="app_name">Gallery App</string>
    <string name="home_title">My Gallery</string>
    <string name="home_subtitle">Capture images and browse a selected folder.</string>
    <string name="choose_folder">Choose Folder</string>
    <string name="no_images_to_display">No images to display</string>
    <string name="home_no_folder_selected">No folder selected. Tap "Choose Folder and View Images".</string>
    <string name="home_empty_text">No images to show on home screen.</string>
    <string name="take_photo">Take Photo</string>
    <string name="open_folder">Choose Folder and View Images</string>
    <string name="splash_tagline">Capture and manage your moments</string>
    <string name="gallery_title">Folder Images</string>
    <string name="sample_folder_path">Folder: /storage/emulated/0/Pictures/MyGallery</string>
    <string name="folder_label">Folder: %1$s</string>
    <string name="change_folder">Change Folder</string>
    <string name="sample_image_name">IMG_001.jpg</string>
    <string name="image_thumbnail">Image Thumbnail</string>
    <string name="image_details_title">Image Details</string>
    <string name="image_preview">Image Preview</string>
    <string name="delete_image">Delete Image</string>
    <string name="delete_dialog_title">Delete this image?</string>
    <string name="delete_dialog_message">Are you sure you want to delete this image? This action cannot be undone.</string>
    <string name="delete">Delete</string>
    <string name="details">Details</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="label_name">Name: %1$s</string>
    <string name="label_path">Path: %1$s</string>
    <string name="label_size">Size: %1$s</string>
    <string name="label_date_taken">Date taken: %1$s</string>
    <string name="label_camera">Camera: %1$s</string>
    <string name="label_lens">Lens: %1$s</string>
    <string name="label_location">Location: %1$s</string>
    <string name="label_exif_extras">Other metadata: %1$s</string>
    <string name="no_images_found">No images found in this folder.</string>
</resources>