<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_surface"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imagePreviewFull"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="#E9EEF7"
        android:contentDescription="@string/image_preview"
        android:scaleType="fitCenter"
        android:src="@android:drawable/ic_menu_gallery" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDetails"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:backgroundTint="@color/brand_primary_dark"
            android:text="@string/details"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Space
            android:layout_width="10dp"
            android:layout_height="1dp" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:backgroundTint="@color/danger"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>
